[gd_scene load_steps=5 format=3 uid="uid://cobi3saxoju1f"]

[ext_resource type="Script" path="res://Player/Attack/flying_sword.gd" id="1_f7nkr"]
[ext_resource type="AudioStream" uid="uid://nfw3lmgchp21" path="res://assets/Sounds/synth.wav" id="2_qbmil"]

[sub_resource type="CanvasTexture" id="CanvasTexture_lhkc7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvnsb"]
size = Vector2(16.2035, 77.9143)

[node name="FlyingSword" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_f7nkr")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -0.785398
scale = Vector2(14.7404, 78.1251)
texture = SubResource("CanvasTexture_lhkc7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.785398
shape = SubResource("RectangleShape2D_kvnsb")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPositionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="sound_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qbmil")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPositionTimer" to="." method="_on_reset_position_timer_timeout"]
